# ezwebsocket

./: .clang-format  README.md  meson.build  meson_options.txt
examples/: client_autobahn.c  client_chat.c  server_autobahn.c  server_autobahn_legacy.c  server_chat.c
inc/: ezwebsocket.h  meson.build  websocket.h
include/: ezwebsocket.h  ezwebsocket_log.h
lib/: ezwebsocket.c  meson.build
lib/socket_client/: socket_client.c  socket_client.h
lib/socket_server/: socket_server.c  socket_server.h
lib/utils/: base64.c  base64.h  dyn_buffer.c  dyn_buffer.h  log.c  ref_count.c  ref_count.h  sha1.c  sha1.h  stringck.c  stringck.h  utf8.c  utf8.h
src/: meson.build  websocket.c
src/socket_client/: socket_client.c  socket_client.h
src/socket_server/: socket_server.c
src/utils/: dyn_buffer.c  ref_count.c  sha1.h
tests/: client_autobahn.c  meson.build
