
executable(
  'client_autobahn',
  'client_autobahn.c',
  dependencies: [
		   dep_libezwebsocket,
		],
  include_directories: inc_public,
  install: false
)

executable(
  'server_autobahn',
  'server_autobahn.c',
  dependencies: [
		   dep_libezwebsocket,
		],
  include_directories: inc_public,
  install: false
)

executable(
  'server_autobahn_legacy',
  'server_autobahn_legacy.c',
  dependencies: [
		   dep_libezwebsocket,
		],
  include_directories: inc_public,
  install: false
)

executable(
  'client_chat',
  'client_chat.c',
  dependencies: [
		   dep_libezwebsocket,
		],
  include_directories: inc_public,
  install: false
)

executable(
  'server_chat',
  'server_chat.c',
  dependencies: [
		   dep_libezwebsocket,
		],
  include_directories: inc_public,
  install: false
)
